--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,170 +1,4 @@
-@use "reset";
-@use "mixins" as m;
-
-header {
-    display: flex;
-    position: relative;
-    align-items: center;
-    height: 100vh;
-    background-image: url(./../../assets/negative-space-black-forest-dawn.jpg);
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
-    .header-title{
-        display: flex;
-        flex-wrap: wrap;
-        width: 100%;
-        justify-content: center;
-        align-items: center;
-        & h1, h2 {
-            width: 70%;
-            height: 90px;
-            text-align: center;
-            font-size: 20px;
-            word-spacing: 2px;
-        }
-        & h1 {
-            font-size: 22px;
-            letter-spacing: 1px;
-            word-spacing: 2px;
-            font-weight: 700;
-        }
-    }
-    .scroll-btn{
-        position: absolute;
-        bottom: 30px;
-        left: 50%;
-        transform: translateX(-50%);
-        a{
-            i{
-                font-size: 30px;
-                font-weight: 700;
-            }
-        }
-    }
-}
-
-nav {
-    .hamburger__icon{
-        position: absolute;
-        z-index: 5;
-        right: 15px;
-        top: 7px; 
-        &:hover {
-            cursor: pointer;
-        }
-        div {
-            position: relative;
-            width: 25px;                
-            height: 4px;
-            border-radius: 3px;
-            background-color: white;
-            margin-top: 5px;
-            transition: all 0.2s ease-in-out;
-        }
-    }
-    #toggle {
-    display: none;
-    
-    &:checked + .hamburger__icon .hamburger__icon__top-bun {
-        transform: rotate(135deg);
-        background-color: white;
-        margin-top: 12px;   
-    }
-    &:checked + .hamburger__icon .hamburger__icon__meat {
-        opacity: 0;
-        transform: rotate(45deg);
-    }
-    &:checked + .hamburger__icon .hamburger__icon__bottom-bun {
-        transform: rotate(-135deg);
-        background-color: white;
-        margin-top: -13px;
-    }
-        
-    &:checked  + .hamburger__icon + .menu{
-        transform: scale(1);
-        top: 0;
-    }
-    }
-    .menu{
-        display: flex;
-        justify-content: center;
-        align-items: flex-end;
-        position: fixed;
-        width: 100%;
-        height: 140px;
-        transition: all 0.2s ease-in-out;
-        transform: scale(0);
-        &__bg{
-            z-index: -1;
-            position: absolute;
-            width: 100%;
-            height: 100%;
-            background-color: white;
-            opacity: 0.2;
-        }
-        ul {
-            display: flex;
-            flex-direction: column;
-            gap: 3px;
-            padding-bottom: 4px;
-            li{
-                text-align: center;
-                a{
-                    color: white;
-                    text-decoration: none;
-                    letter-spacing: 1px;
-                }
-            }
-        }
-    }
-
-}
-main {
-    width: 100%;
-    height: 100vh;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 20px;
-    .title{
-        width: 100%;
-        text-align: center;
-        h2 {
-            color: black;
-            padding: 30px 0;
-            font-size: 28px;
-            font-weight: 700;
-        }
-    }
-    .profile{
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        width: 80%;
-        gap: 5px;
-        &__name{
-            font-weight: bold;
-            padding: 15px 0;
-        }
-        &__img{
-            width: 80%;
-            img{
-                width: 100%;
-                border-radius: 50%;
-                box-shadow: 0 0 40px rgba($color: #000000, $alpha: 0.5);
-            }  
-        }
-        &__quote{
-            display: flex;
-            background-color: lightgray;
-            border-radius: 5px;
-            padding: 30px 40px;
-            &__logo{
-                i {
-                    font-size: 30px;
-                }
-            }
-        }
-    }
-}
+@use "layouts/header";
+@use "layouts/navigation";
+@use "layouts/main";
+@use "layouts/footer";
