--- a/src/scss/layouts/_footer.scss
+++ b/src/scss/layouts/_footer.scss
@@ -7,10 +7,10 @@ footer{
     width: 100%;
     background-color: #000000;
     display: flex;
-    justify-content: center;
+    justify-content: end;
     padding: 60px 0;
     section {
-        width: 50%;
+        width: 70%;
         display: flex;
         flex-direction: column;
 
