--- a/src/scss/layouts/_main.scss
+++ b/src/scss/layouts/_main.scss
@@ -53,17 +53,13 @@ main {
             }  
         }
         &__quote{
-            width: 100%;
             display: flex;
             align-items: center;
-            height: 150px;
-            padding: 0 45px;
+            padding: 30px 50px;
             background-color: lightgray;
             border-radius: 10px;
             @include m.desktop{
-                width: 70%;
-                
-                padding: 0 50px;
+                max-width: 70%;   
             }
             &__logo{
                 i {
