--- a/src/scss/layouts/_header.scss
+++ b/src/scss/layouts/_header.scss
@@ -11,28 +11,35 @@ header {
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
-    .header-title{
+    .headerTitle{
         display: flex;
+        flex-direction: column;
         flex-wrap: wrap;
         width: 100%;
         justify-content: center;
         align-items: center;
-        & h1, h2 {
-            width: 70%;
+        & h1 {
             height: 90px;
             text-align: center;
-            font-size: 20px;
-            word-spacing: 2px;
-        }
-        & h1 {
-            font-size: 22px;
-            letter-spacing: 1px;
+            font-size: 32px;
             word-spacing: 2px;
             font-weight: 700;
         }
+        & h2 {
+            height: 90px;
+            text-align: center;
+            font-size: 22px;
+            letter-spacing: 1px;
+            word-spacing: 2px;
+            width: 80%;
+            
+        }
+        .headerTitle__rowThree{
+            width: 70%;
+        }
     }
-    .scroll-btn{
-        @include m.scroll-btn;
+    .scrollBtn{
+        @include m.scrollBtn;
     }
     
 }
