bg url has been changes. parcel showed wrong

--- a/src/scss/layouts/_header.scss
+++ b/src/scss/layouts/_header.scss
@@ -7,7 +7,7 @@ header {
     position: relative;
     align-items: center;
     height: 100vh;
-    background-image: url(./../../assets/negative-space-black-forest-dawn.jpg);
+    background-image: url("../assets/negative-space-black-forest-dawn.jpg");
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
