--- a/src/scss/layouts/_header.scss
+++ b/src/scss/layouts/_header.scss
@@ -18,7 +18,7 @@ header {
         width: 100%;
         justify-content: center;
         align-items: center;
-        & h1 {
+        & h1, h2 {
             height: 90px;
             text-align: center;
             font-size: 32px;
@@ -26,13 +26,8 @@ header {
             font-weight: 700;
         }
         & h2 {
-            height: 90px;
-            text-align: center;
             font-size: 22px;
-            letter-spacing: 1px;
-            word-spacing: 2px;
-            width: 80%;
-            
+            width: 80%;     
         }
         .headerTitle__rowThree{
             width: 70%;
